--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "eslint": "^8.57.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.34.1",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
