--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "eslint-plugin-n": "^16.6.2",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
+    "prettier": "3.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
   },
