--- a/package.json
+++ b/package.json
@@ -3,7 +3,11 @@
   "version": "1.0.0",
   "main": "main.js",
   "scripts": {
-    "dev": "webpack --mode development --watch"
+    "dev": "webpack --mode development --watch",
+    "format": "prettier --write ./webdev-dom-homework/**/*.js",
+    "lint:js": "eslint ./webdev-dom-homework/**/*.js",
+  "lint:css": "stylelint ./webdev-dom-homework/**/*.css",
+  "prepare": "husky install"
   },
   "author": "",
   "license": "ISC",
@@ -13,11 +17,14 @@
   },
   "devDependencies": {
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard": "^17.1.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-n": "^16.6.2",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.34.1",
+    "husky": "^9.0.11",
     "prettier": "3.2.5",
     "webpack": "^5.91.0",
     "webpack-cli": "^5.1.4"
