--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,19 +4,13 @@
         "es2021": true,
         "node": true
     },
-    "extends": [
-        "standard",
-        "plugin:recommended/prettier"
-    ],
+    "extends": ["eslint:recommended", "prettier"],
     "parserOptions": {
         "ecmaVersion": "latest",
         "sourceType": "module"
     },
-    "plugins": [
-        "prettier"
-    ],
+    "plugins": ["prettier"],
     "rules": {
-        "prettier/prettier": "error",
         "camelcase": ["error"],
         "eqeqeq": ["error", "always"]
     }
